--- a/css/style.css
+++ b/css/style.css
@@ -312,7 +312,7 @@ section {
 	background: #000;
 }
 
-.education .education__content {
+/* .education .education__content {
 	display: flex;
 	justify-content: center;
 	flex-direction: row;
@@ -362,95 +362,36 @@ section {
 .education .education__content .education__card:hover p {
 	color: #fff;
 }
+ */
 
-.work .work__content {
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
-}
-
-.work .work__content .work__card {
-	position: relative;
-	width: 100%;
-	max-width: 265px;
-	height: auto;
-	margin: 10px;
-	text-align: center;
-	background-color: #000;
-	transition: .4s ease;
-}
-
-.work .work__content .work__card:hover {
-	box-shadow: 0px 0px 14px 2px rgba(0, 0, 0, 0.75);
-}
-
-.work .work__content .work__card .work__img .portfolio__img {
-	width: 100%;
-	height: 220px;
-	object-fit: cover;
-}
-
-.work .work__content .work__card .work__text {
-	background-color: #000;
-	opacity: 1;
-	transition: 0.5s;
-	display: flex;
-	flex-direction: column;
-}
-
-.work .work__content .work__card:hover .work__text {
-	max-height: 200px;
-	opacity: 0.9;
-
-}
-
-.work .work__content .work__card .work__text h4 {
-	padding: 5px;
-	color: #fff;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-}
-
-.work .work__content .work__card .work__text .btn {
-	width: 105px;
-	height: 30px;
-	margin-bottom: 20px;
-	border: none;
-	background: #6b61ff;
-	transition: .5s;
-}
-
-.work .work__content .work__card .work__text .btn:hover {
-	opacity: .5;
-}
-
-.work .work__content .work__card .work__text .work-text {
-	padding: 20px 0;
-	color: #fff;
-}
- 
 .work__gallery {
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
- }
- 
- .work__gallery-card {
+}
+
+.work__gallery-card {
 	position: relative;
 	margin: 10px;
 	width: 280px;
- }
- 
- .work__gallery-card img {
+	transition: .2s ease;
+}
+
+.work__gallery-card:hover {
+	box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.61);
+}
+
+.work__gallery-card img {
 	width: 100%;
-	height: 280px; 
+	height: 280px;
 	object-fit: cover;
- }
+}
 
 
 .title.white h2 {
 	color: #fff;
 }
+
 .title.white p {
 	color: #fff;
 }
@@ -514,7 +455,8 @@ section {
 		margin-bottom: 30px;
 
 	}
-	.sci{
+
+	.sci {
 		left: inherit;
 	}
 
@@ -525,10 +467,10 @@ section {
 
 @media (max-width: 768px) {
 	.work__gallery-card {
-	  width: 100%;
+		width: 100%;
 	}
- }
- 
+}
+
 
 @media(max-width:500px) {
 
@@ -550,4 +492,3 @@ section {
 		right: 20px;
 	}
 }
-
